--- a/index.html
+++ b/index.html
@@ -35,12 +35,25 @@
 
 
   <section id = "b" class="panel">
-    <div class = "space">
-      <ul class = "list">
-        <li><h1>Alexa</h1></li>
-        <li><h1>Siri</h1></li>
-        <li><h1>Cortana</h1></li>
-      </ul>
+    <div = class = "container">
+      <div id = "alexa" class = "box">
+        <h1>Alexa</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sunt reiciendis, quam voluptatum facere mollitia amet consectetur voluptate labore ipsa tempora possimus dolore vero fuga animi culpa harum natus in.</p>
+        <h2 class = "ilink">Click here to view more...</h2>
+        <img src="alexa.png" alt="alexa image">
+      </div>
+      <div id = "siri" class = "box">
+        <h1>Siri</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas totam, sequi numquam ab quo ducimus recusandae, ea neque! Nesciunt eius aliquid, consequuntur alias non, nihil veniam! Dolores incidunt consequatur excepturi?</p>
+        <h2 class = "ilink">Click here to view more...</h2>
+        <img id = "simage" src="siri.png" alt="siri image">
+      </div>
+      <div id = "cortana" class = "box">
+        <h1>Cortana</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi molestias dignissimos quidem deleniti, quo quisquam quos porro excepturi neque, perferendis ullam voluptate error deserunt autem! Corrupti placeat reprehenderit ullam eos.</p>
+        <h2 class = "ilink">Click here to view more...</h2>
+        <img src="cortana.png" alt="cortana image">
+      </div>
     </div>
   </section>
 
@@ -59,6 +72,10 @@
     document.getElementById("myNav").style.height = "0%";
   }
   </script>
+
+  <footer>
+		<p>&copy; Sam Clark 2020. All rights reserved</p>
+  </footer>
 
 
 </body>
