--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
       <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     </div>
     <h1 class="title">Artificial Intelligence</h1>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit itaque iste recusandae dolor placeat id, suscipit vel, corporis voluptatibus expedita perferendis tempore doloremque rerum dolorum quidem dolore officiis possimus esse! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, architecto perspiciatis perferendis vel quos ipsa facere dolorum totam iusto ipsam, error neque iure, sint officiis atque unde, dolore commodi at!</p>
+    <p class="description"><br>Artificial Intelligence is an always evolving technology that learns from information it gets given.</br> <br>The idea of AI has been around for a long time, but has really taken off in the past 10 years and has become very smart. There are many different types of AI that are used for many different uses.</br> <br>Scroll down to learn more!</br></p>
   </section>
 
 
   <section id = "b" class="panel">
-    <div = class = "container">
+    <div class = "container">
       <div id = "alexa" class = "box">
         <h1>Alexa</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sunt reiciendis, quam voluptatum facere mollitia amet consectetur voluptate labore ipsa tempora possimus dolore vero fuga animi culpa harum natus in.</p>
+        <p>Alexa is an AI developed by Amazon in (20--). It's an extremly smart AI that is commonly used on smart home speakers like the Amazon Echo and the Sonos One.</p>
         <h2 class = "ilink">Click here to view more...</h2>
         <img src="alexa.png" alt="alexa image">
       </div>
       <div id = "siri" class = "box">
         <h1>Siri</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas totam, sequi numquam ab quo ducimus recusandae, ea neque! Nesciunt eius aliquid, consequuntur alias non, nihil veniam! Dolores incidunt consequatur excepturi?</p>
+        <p>Siri is an AI developed by Apple in (2011). Siri was one of the first AIs made available to the public and is one of the most used AI in the world. It is used on pretty much all Apple devices.</p>
         <h2 class = "ilink">Click here to view more...</h2>
         <img id = "simage" src="siri.png" alt="siri image">
       </div>
       <div id = "cortana" class = "box">
         <h1>Cortana</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi molestias dignissimos quidem deleniti, quo quisquam quos porro excepturi neque, perferendis ullam voluptate error deserunt autem! Corrupti placeat reprehenderit ullam eos.</p>
+        <p>Cortana is an AI developed by Microsoft in (2012). Cortana is an AI that is only on Windows laptops and is used to help users navigate the system easier.</p>
         <h2 class = "ilink">Click here to view more...</h2>
         <img src="cortana.png" alt="cortana image">
       </div>
@@ -59,7 +59,14 @@
 
   <section id = "c" class="panel">
     <h1 class = "history">History of AI</h1>
-    <p = class = "explain">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime perferendis nesciunt, at voluptate explicabo quo debitis ipsa temporibus excepturi! Tempore eius laboriosam, voluptates libero ratione tenetur cumque, atque. Voluptas, aliquam.</p>
+    <p class = "explain">The idea of AI has been around since the late 1930s with the Tin Man in the Wizard of Oz. Ever since the launch of Siri in 2011, AI has taken off and has taken many forms since then. Before 2011, AI was mostly only seen in science fiction films.</p>
+    <a href="#" class="hlink">Find out more</a>
+  </section>
+
+
+  <section id = "d" class = "contact">
+    <h1 class = "contact_header">CONTACT</h1>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetiBL7zzIBk61r9zhRrY2mqTAyYtpi0NueJ4MALcoGG80I0w/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
   </section>
 
