--- a/index.html
+++ b/index.html
@@ -38,20 +38,26 @@
     <div class = "container">
       <div id = "alexa" class = "box">
         <h1>Alexa</h1>
-        <p>Alexa is an AI developed by Amazon in (20--). It's an extremly smart AI that is commonly used on smart home speakers like the Amazon Echo and the Sonos One.</p>
-        <h2 class = "ilink">Click here to view more...</h2>
+        <p>Alexa is an AI developed by Amazon in 2014. It's an extremly smart AI that is commonly used on smart home speakers like the Amazon Echo and the Sonos One.</p>
+        <h2 class = "ilink">
+          <a href="#">Click here to view more...</a>
+        </h2>
         <img src="alexa.png" alt="alexa image">
       </div>
       <div id = "siri" class = "box">
         <h1>Siri</h1>
-        <p>Siri is an AI developed by Apple in (2011). Siri was one of the first AIs made available to the public and is one of the most used AI in the world. It is used on pretty much all Apple devices.</p>
-        <h2 class = "ilink">Click here to view more...</h2>
+        <p>Siri is an AI developed by Apple in 2011. Siri was one of the first AIs made available to the public and is one of the most used AI in the world. It is used on pretty much all Apple devices.</p>
+        <h2 class = "ilink">
+          <a href="#">Click here to view more...</a>
+        </h2>
         <img id = "simage" src="siri.png" alt="siri image">
       </div>
       <div id = "cortana" class = "box">
         <h1>Cortana</h1>
-        <p>Cortana is an AI developed by Microsoft in (2012). Cortana is an AI that is only on Windows laptops and is used to help users navigate the system easier.</p>
-        <h2 class = "ilink">Click here to view more...</h2>
+        <p>Cortana is an AI developed by Microsoft in 2012. Cortana is an AI that is only on Windows laptops and is used to help users navigate the system easier.</p>
+        <h2 class = "ilink">
+          <a href="#">Click here to view more...</a>
+        </h2>
         <img src="cortana.png" alt="cortana image">
       </div>
     </div>
@@ -66,7 +72,7 @@
 
   <section id = "d" class = "contact">
     <h1 class = "contact_header">CONTACT</h1>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetiBL7zzIBk61r9zhRrY2mqTAyYtpi0NueJ4MALcoGG80I0w/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe id = "form" src="https://docs.google.com/forms/d/e/1FAIpQLSetiBL7zzIBk61r9zhRrY2mqTAyYtpi0NueJ4MALcoGG80I0w/viewform?embedded=true" width="540" height="725" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
   </section>
 
