--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <a href="javascript:void(0)" class = "closebutton" onclick = "closeNav()">&times;</a>
     <h1 id = "big">Artificial Intelligence</h1>
     <div class="overlaycontent">
-      <a href="#">HOME</a>
-      <a href="#">ALEXA</a>
-      <a href="#">SIRI</a>
-      <a href="#">CORTANA</a>
+      <a href="index.html">HOME</a>
+      <a href="alexa.html">ALEXA</a>
+      <a href="siri.html">SIRI</a>
+      <a href="cortana.html">CORTANA</a>
       <a href="#">HISTORY</a>
     </div>
   </div>
@@ -40,7 +40,7 @@
         <h1>Alexa</h1>
         <p>Alexa is an AI developed by Amazon in 2014. It's an extremly smart AI that is commonly used on smart home speakers like the Amazon Echo and the Sonos One.</p>
         <h2 class = "ilink">
-          <a href="#">Click here to view more...</a>
+          <a href="alexa.html">Click here to view more...</a>
         </h2>
         <img src="alexa.png" alt="alexa image">
       </div>
@@ -48,15 +48,15 @@
         <h1>Siri</h1>
         <p>Siri is an AI developed by Apple in 2011. Siri was one of the first AIs made available to the public and is one of the most used AI in the world. It is used on pretty much all Apple devices.</p>
         <h2 class = "ilink">
-          <a href="#">Click here to view more...</a>
+          <a href="siri.html">Click here to view more...</a>
         </h2>
         <img id = "simage" src="siri.png" alt="siri image">
       </div>
       <div id = "cortana" class = "box">
         <h1>Cortana</h1>
-        <p>Cortana is an AI developed by Microsoft in 2012. Cortana is an AI that is only on Windows laptops and is used to help users navigate the system easier.</p>
+        <p>Cortana is an AI developed by Microsoft in 2014. Cortana is an AI that is only on Windows laptops and is used to help users navigate the system easier.</p>
         <h2 class = "ilink">
-          <a href="#">Click here to view more...</a>
+          <a href="cortana.html">Click here to view more...</a>
         </h2>
         <img src="cortana.png" alt="cortana image">
       </div>
