--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
     </div>
   </section>
 
+
   <section id = "c" class="panel">
-    <h1 class = "history">History of AI</h1>
-    <p class = "explain">The idea of AI has been around since the late 1930s with the Tin Man in the Wizard of Oz. Ever since the launch of Siri in 2011, AI has taken off and has taken many forms since then. Before 2011, AI was mostly only seen in science fiction films.</p>
-    <a href="#" class="hlink">Find out more</a>
+    <div id = "empty"></div>
+    <div id = "thecontent">
+      <h1 class = "history">History of AI</h1>
+      <p class = "explain">The idea of AI has been around since the late 1930s with the Tin Man in the Wizard of Oz. Ever since the launch of Siri in 2011, AI has taken off and has taken many forms since then. Before 2011, AI was mostly only seen in science fiction films.</p>
+      <br>
+      <br>
+      <a href="#" class="hlink">Find out more</a>
+    </div>
   </section>
 
 
