--- a/alexa.html
+++ b/alexa.html
@@ -20,7 +20,7 @@
       <a href="alexa.html">ALEXA</a>
       <a href="siri.html">SIRI</a>
       <a href="cortana.html">CORTANA</a>
-      <a href="#">HISTORY</a>
+      <a href="history.html">HISTORY</a>
     </div>
   </div>
 
