--- a/cortana.html
+++ b/cortana.html
@@ -20,7 +20,7 @@
       <a href="alexa.html">ALEXA</a>
       <a href="siri.html">SIRI</a>
       <a href="cortana.html">CORTANA</a>
-      <a href="#">HISTORY</a>
+      <a href="history.html">HISTORY</a>
     </div>
   </div>
 
@@ -36,13 +36,13 @@
 
   <section id = "b" class="panel">
     <div class = "container">
-      <div id = "alexa" class = "box">
+      <div id = "cortana" class = "box">
         <h1>About</h1>
         <p>Cortana was named after the Artificial Intelligence in the Microsoft game called 'Halo 4' on the Xbox 360. Cortana was Microsoft's way of keeping up with it's competitor, Apple, who had releaced Siri the year before. Cortana is known to be pretty good at answering questions and can be very useful when used correctly. Cortana is also entering the smart home industry and is being recieved quite positivly for it's performance.</p>
         <h2 class = "ilink">
           <a href="https://www.microsoft.com/en-us/cortana">Click here to learn more about Cortana...</a>
         </h2>
-        <img src="cortana.png" alt="alexa image">
+        <img src="cortana.png" alt="cortana image">
       </div>
 
       <div id = "devices" class = "box">
