--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="alexa.html">ALEXA</a>
       <a href="siri.html">SIRI</a>
       <a href="cortana.html">CORTANA</a>
-      <a href="#">HISTORY</a>
+      <a href="history.html">HISTORY</a>
     </div>
   </div>
 
@@ -71,7 +71,7 @@
       <p class = "explain">The idea of AI has been around since the late 1930s with the Tin Man in the Wizard of Oz. Ever since the launch of Siri in 2011, AI has taken off and has taken many forms since then. Before 2011, AI was mostly only seen in science fiction films.</p>
       <br>
       <br>
-      <a href="#" class="hlink">Find out more</a>
+      <a href="history.html" class="hlink">Find out more</a>
     </div>
   </section>
 
@@ -95,7 +95,6 @@
   <footer>
 		<p>&copy; Sam Clark 2020. All rights reserved</p>
   </footer>
-
 
 </body>
 </html>
