--- a/siri.html
+++ b/siri.html
@@ -20,7 +20,7 @@
       <a href="alexa.html">ALEXA</a>
       <a href="siri.html">SIRI</a>
       <a href="cortana.html">CORTANA</a>
-      <a href="#">HISTORY</a>
+      <a href="history.html">HISTORY</a>
     </div>
   </div>
 
@@ -36,7 +36,7 @@
 
   <section id = "b" class="panel">
     <div class = "container">
-      <div id = "alexa" class = "box">
+      <div id = "cortana" class = "box">
         <h1>About</h1>
         <p>Siri is one of the first AI that was ever made accessible to the people of the world, it jumpstarted the devolpment of AI from tons of Apple's competitors. Siri is capable of doing many things, she can play music, make phone calls, send text messages, read the weather, find reviews on movies, find the scores of sport matches, and even call you a nickname.</p>
         <h2 class = "ilink">
@@ -51,7 +51,7 @@
         <h2 class = "ilink">
           <a href="https://support.apple.com/en-nz/HT204389">Click here to view devices that support Siri...</a>
         </h2>
-        <img id = "img2" src="applehome.png" alt="alexa image">
+        <img id = "img2" src="applehome.png" alt="siri image">
       </div>
     </div>
   </section>
